# d-tale-utils

./: pyproject.toml
src/dtale_utils/: __init__.py  dtale_utils.py
